fixed swagger 2
